--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -7,16 +7,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 5px solid red;
+  border: 1px solid #8E8E8E;
   width: 100%;
   height: 700px;
 }
 
 .calculator-body {
   display: flex;
-  border: 5px solid red;
+  border: 1px solid #8E8E8E;
   border-radius: 6px;
-  box-shadow: 10px 10px black;
+  box-shadow: 20px 15px 40px 10px rgba(126, 126, 126, .6);
   width: 300px;
   height: 400px
+}
+
+.calculator-num-window {
+  display: flex;
+  background-color: #969696;
+  border: #8E8E8E;
+  width: 300px;
+  height: 100px;
+}
+
+.calculator-num {
+
 }
