--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,8 +1,3 @@
-.body-font {
-  font-family: 'Roboto', sans-serif;
-  font-size: 36px;
-}
-
 .calculator-container {
   display: flex;
   justify-content: center;
@@ -12,8 +7,14 @@
   height: 700px;
 }
 
+.calculator-font {
+  font-family: 'Roboto', sans-serif;
+  font-size: 25px;
+  align-self: center;
+  text-align: center;
+}
+
 .calculator-body {
-  display: flex;
   border: 1px solid #8E8E8E;
   border-radius: 6px;
   box-shadow: 20px 15px 40px 10px rgba(126, 126, 126, .6);
@@ -21,14 +22,47 @@
   height: 400px
 }
 
-.calculator-num-window {
+.calculator-row {
   display: flex;
+  width: 300px;
+  height: 60px;
+}
+
+
+.calculator-window {
   background-color: #969696;
   border: #8E8E8E;
   width: 300px;
   height: 100px;
 }
 
-.calculator-num {
-
+.calculator-nums {
+  position: absolute;
+  width: 300px;
+  height: 300px;
 }
+
+.calculator-button {
+  display: inline-flex;
+  justify-content: center;
+  width: 75px;
+  height: 58px;
+  border: 1px solid #8E8E8E;
+}
+
+.calculator-button-zero {
+  display: inline-flex;
+  justify-content: center;
+  width: 152px;
+  height: 58px;
+  border: 1px solid #8E8E8E;
+}
+
+.calculator-operations {
+  background-color: #f5923f;
+}
+
+.calculator-num-colors {
+  background-color: #d6d6d6;
+}
+
