WIP UI works except for operations alignment, and text appears on button hover

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -52,6 +52,12 @@
   text-align: center;
 }
 
+.calculator-operations-font {
+  font-family: 'Roboto', sans-serif;
+  font-size: 25px;
+  color: #fff;
+}
+
 .calculator-body {
   border: 1px solid #8E8E8E;
   border-radius: 6px;
