--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,8 +1,15 @@
+.screen-buttons {
+  display: flex;
+  flex-direction: row;
+  align-self: flex-start;
+  padding-right: 205px;
+}
+
 .btn-spacing {
   margin: 5px;
 }
 
-.btn-window {
+.btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,6 +17,7 @@
   width: 15px;
   border-radius: 50%;
   font-family: 'Roboto', sans-serif;
+  font-size: 12px;
 }
 
 .btn-close {
@@ -74,11 +82,15 @@
 
 .calculator-window {
   display: flex;
-  justify-content: flex-start;
-  background-color: #969696;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-color: rgba(150, 150, 150, .8);
   border: #8E8E8E;
   width: 300px;
   height: 100px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  color: #fff;
 }
 
 .calculator-nums {
@@ -108,6 +120,8 @@
 }
 
 .calculator-button-zero {
+  display: flex;
+  justify-content: center;
   width: 152px;
   height: 58px;
   border: 1px solid #8E8E8E;
